Bug 495462 - QtWidgets KCM headers don't change colors immediately; need to restart the app
Summary: QtWidgets KCM headers don't change colors immediately; need to restart the app
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 499998 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-10-28 04:07 UTC by Nate Graham
Modified: 2025-05-28 02:16 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments
Wrong colors (241.69 KB, image/png)
2024-10-28 04:07 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2024-10-28 04:07:13 UTC
Created attachment 175292 [details]
Wrong colors

Current git master.

See attached screenshot. Looks like the colors have gotten stuck to Breeze Light.
Comment 1 Nate Graham 2024-12-13 16:40:17 UTC
Downgrading severity as the workaround is to simply restart the app after changing colors.
Comment 2 Nate Graham 2025-02-19 14:59:09 UTC
*** Bug 499998 has been marked as a duplicate of this bug. ***
Comment 3 Marco Martin 2025-05-26 14:17:36 UTC
An interesting fact is that if i have a widgets kcm open in kcmshell6 at the sametime the colors kcm is open in systemsettings, its header changes color immediately, is only those that are in systemsettings itself
Comment 4 Marco Martin 2025-05-26 14:21:23 UTC
if i do the opposite, widget kcm like fontinst loaded in systemsettings and the coolors on in kcmshell, then the header color does *not* update automatically
Comment 5 Bug Janitor Service 2025-05-27 09:49:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/systemsettings/-/merge_requests/360
Comment 6 Marco Martin 2025-05-27 09:53:16 UTC
Git commit 314c6e87bdca262b3ce7e863d7a79657e937f51f by Marco Martin.
Committed on 27/05/2025 at 09:43.
Pushed by mart into branch 'master'.

Fix header colors of QWidget based KCMs

If we create a QPalette from scratch for the KCM header,
we won't be notified anymore about palette changes, so when
changing the color scheme the PaletteChanged events won't arrive.
if we instead start form QWidget::palette() and then modify it
we will get the events and the color scheme changes will be applied
immediately

M  +1    -1    app/ModuleView.cpp

https://invent.kde.org/plasma/systemsettings/-/commit/314c6e87bdca262b3ce7e863d7a79657e937f51f
Comment 7 Marco Martin 2025-05-27 09:54:00 UTC
Git commit bd4d17996062ad0a78a0157cdc17603ccbf8a0ea by Marco Martin.
Committed on 27/05/2025 at 09:53.
Pushed by mart into branch 'Plasma/6.4'.

Fix header colors of QWidget based KCMs

If we create a QPalette from scratch for the KCM header,
we won't be notified anymore about palette changes, so when
changing the color scheme the PaletteChanged events won't arrive.
if we instead start form QWidget::palette() and then modify it
we will get the events and the color scheme changes will be applied
immediately


(cherry picked from commit 314c6e87bdca262b3ce7e863d7a79657e937f51f)

314c6e87 Fix header colors of QWidget based KCMs

Co-authored-by: Marco Martin <notmart@gmail.com>

M  +1    -1    app/ModuleView.cpp

https://invent.kde.org/plasma/systemsettings/-/commit/bd4d17996062ad0a78a0157cdc17603ccbf8a0ea