Fix header colors of QWidget based KCMs

If we create a QPalette from scratch for the KCM header,
we won't be notified anymore about palette changes, so when
changing the color scheme the PaletteChanged events won't arrive.
if we instead start form QWidget::palette() and then modify it
we will get the events and the color scheme changes will be applied
immediately

BUG:495462